--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>CV - Olivia</title>
+	<title>CV - Alfiqi</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
 	    <div class="content">
 	    	<!-- code untuk menambahkan Profil -->
       		<div id="content-img">
-        		<div class="content1">
+        		<div class="content1"> 
         		  <img src="img/alfiqi 1.png">
           		  <h2 class="content-header">Alfiqi favian lubis</h2>
          		  <p class="content-text">
