--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 		    <section class="section">
 		        <h2 class="section-header">Skill</h2>
 		        <div class="responsive-table">
-		            <table>
+		            <table>.
+						
 		             	<tr class="tr-header">
 		                	<th>&nbsp;</th>
 		                	<th>Percent</th>
